src/main/java/com/example/frota/errors/CpfJaExisteException.java
package com.example.frota.errors;

public class CpfJaExisteException extends RuntimeException {
    public CpfJaExisteException(String message) {
        super(message);
    }
}